--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : "@anicolson1"
+  twitter          : "anicolson1"
   vine             :
   weibo            :
   xing             :
