--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=6W-kJRgAAAAJ&hl=en&oi=ao"
-  email            : "adair.nicolson.20@ucl.ac.uk
+  email            : "adair.nicolson.20@ucl.ac.uk"
   researchgate     :  
   uri              :
   bitbucket        :
