--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Adair Nicolson"
-  avatar           : "website_photo.png"
+  avatar           : "website_photo.jpg"
   bio              : "PhD Researcher at University College London"
   location         : "London, UK"
   employer         :
